# IMA-PCR-Utils

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint-md.yml  pylint.yml  pytest.yml  ruff.yml  spdx.yml
config/: ima-policy
examples/: README.md  appraise.py  ascii_runtime_measurements_policy_before_exec  boot_aggregate.py  pcr10.py  truncate_log.py
examples/sample_input/: appraise_policy.yaml  ascii_runtime_measurements  ascii_runtime_measurements_2
imapcr10/: __init__.py  libs.py
imapcr10/examples/: pcr10.py
imapcrutils/: __init__.py  libs.py  log.py  pcr.py  template.py  verify.py
imapcrutils/appraisal/: __init__.py  appraise.py  loader.py  policy.py
pcr10_calc/: calculate_pcr10.py  main.py
py/: __init__.py  ima_lib.py  requirements.txt
py/examples/: pcr10.py
samples/: ascii_runtime_measurements  ascii_runtime_measurements_after_running  ascii_runtime_measurements_policy_after_exec  ascii_runtime_measurements_policy_changed
tests/: conftest.py  test_appraisal_appraise.py  test_appraisal_loader.py  test_appraisal_policy.py  test_cli.py  test_libs.py  test_log.py  test_pcr.py  test_template.py  test_verify.py
