[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imapcrutils"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
  "ruff >= 0.15.4",
  "pytest >= 9.0.2",
]

[tool.setuptools.packages.find]
include = ["imapcrutils"]

[tool.ruff]
target-version = "py310"
line-length = 128

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "PLR",  # pylint refactor
  "PLW",  # pylint warnings
  "PLE",  # pylint errors
]
ignore = [
  "PLR0913",  # too-many-arguments
  "PLR2004",  # magic-value-comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
